# jsonpatch

./: pyproject.toml
jsonpatch/: __init__.py  diff.py  exceptions.py  operations.py  patch.py  pointer.py
tests/: test_diff.py  test_operations.py  test_patch.py  test_pointer.py
